--- a/MathModel/MathModel.vcxproj.filters
+++ b/MathModel/MathModel.vcxproj.filters
@@ -18,10 +18,10 @@
     <ClCompile Include="MathModel.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="MM_MJD.cpp">
+    <ClCompile Include="MM_MP.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="MM_MP.cpp">
+    <ClCompile Include="MM_MJD.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,5 +32,6 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="README.txt" />
+    <Text Include="_ReadMe.txt" />
   </ItemGroup>
 </Project>
