New data and add select lang.

--- a/MathModel/MathModel.vcxproj
+++ b/MathModel/MathModel.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -154,11 +154,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="MathModel.cpp" />
+    <ClCompile Include="MM_MD.cpp" />
     <ClCompile Include="MM_MJD.cpp" />
     <ClCompile Include="MM_MP.cpp" />
+    <ClCompile Include="TIMER.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MM_H.h" />
+    <ClInclude Include="TIMER.hpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="README.txt" />
