--- a/MathModel/MathModel.vcxproj
+++ b/MathModel/MathModel.vcxproj
@@ -168,6 +168,9 @@
     <Text Include="README.txt" />
     <Text Include="_ReadMe.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="input_data.fnu" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
